test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_hidden.rs
use clapi::macros::*;

#[command(hidden=true)]
fn app(){}

fn main(){}