test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_hidden.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_hidden.rs:3:1
  |
3 | #[command(hidden=true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: only subcommands can be hidden
